# bible_app_api

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/router/: generator.py
app/service/: automations.py  bible.py  chatbot.py
