[project]
name = "bible-quiz-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[all]>=0.138.0",
    "google-genai>=2.9.0",
    "google-generativeai>=0.8.6",
    "lxml>=6.1.1",
    "uvicorn>=0.49.0",
]
